--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -787,7 +787,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="Start_UE">
           <property name="font">
            <font>
             <pointsize>15</pointsize>
@@ -795,12 +795,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
            </font>
           </property>
           <property name="text">
-           <string>Start gNB</string>
+           <string>Start UE</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="Close_UE">
           <property name="font">
            <font>
             <pointsize>15</pointsize>
@@ -808,7 +808,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
            </font>
           </property>
           <property name="text">
-           <string>Close gNB</string>
+           <string>Close UE</string>
           </property>
          </widget>
         </item>
